# evm-mnemonic

./: Cargo.toml  README.md  example_contract.evmm  helper.py
evm_asm/: example_contract.evmasm  mstore_dead.evmasm
evmm_contracts/: example_contract.evmm  mstore_dead.evmm
src/: evmm.pest  main.rs
src/compiler/: compile.rs
src/core/: evmm.rs  mod.rs
src/evmm_error/: evmm_error.rs  mod.rs
src/parser/: mod.rs  parse.rs  parser_error.rs
