[package]
name = "evmm"
version = "0.0.1"
edition = "2021"
authors = ["0xKitsune"]
license = "MIT"
description = "A  framework for writing barebones, hand tuned smart contracts in pure opcodes."
readme = "README.md"
homepage = "https://github.com/0xKitsune/EVM_Mneumonic"
repository = "https://github.com/0xKitsune/EVM_Mneumonic"
keywords = ["cli", "ethereum", "smart contract", "assembly"]
categories = ["command-line-utilities", "compiler"]

[dependencies]
pest = "2.0"
pest_derive = "2.0"
num256 = "0.3.5"
clap = "3.2.16"
